--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -31,7 +31,7 @@
     <header>
         {{> head}}
     </header>
-    <div class="container" style="position: relative;">
+    <div class="container">
         {{{body}}}  
     </div>
     <footer style="padding-top: 30px;">
