--- a/src/resource/views/login.hbs
+++ b/src/resource/views/login.hbs
@@ -12,7 +12,7 @@
                 <p class="text-white-50 mb-5 text-center">Please enter your
                   login and password!</p>
                 <div class="form-outline form-white mb-4">
-                  <label class="form-label text-left">AccountName</label>
+                  <label class="form-label text-left">Account</label>
                   <input
                     type="accountName"
                     id="accountName"
