--- a/src/resource/views/update.hbs
+++ b/src/resource/views/update.hbs
@@ -1,6 +1,6 @@
 <form
   class="form"
-  action="/homepage/update/{{product.brands}}-{{product.name}}-{{product.image}}"
+  action="/homepage/update/{{product.id_product}}-{{product.image}}"
   method="post"
   enctype="multipart/form-data"
 >
@@ -92,3 +92,4 @@
     </div>
   </div>
 </form>
+<script src="/js/view.js"></script>
