--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -48,7 +48,7 @@
   <button
     type="button"
     class="btn btn-success"
-    style="float: right; margin-left: 16px"
+    style="float: right; margin-left: 16px;margin-bottom: 20px"
   >Add Product</button>
 </a>
 <a href="/homepage/list_users">
