--- a/src/resource/views/cart.hbs
+++ b/src/resource/views/cart.hbs
@@ -41,8 +41,8 @@
             <input
               type="number"
               min="1"
-              max="99"
-              style="width:40%;"
+              max="50"
+              style="width: 56%;"
               value="{{this.quantity}}"
               onchange="increaseQuantity(event)"
             />
@@ -54,7 +54,7 @@
             <input type="checkbox" style="transform: scale(1.5);" />
           </td>
           <td style="vertical-align: middle; text-align:center;">
-            <a href="">Delete</a>
+            <a href="/cart/delete/{{this.id_dh}}">Delete</a>
           </td>
         </tr>
       {{/each}}
