--- a/src/resource/views/product.hbs
+++ b/src/resource/views/product.hbs
@@ -20,6 +20,7 @@
     class="information"
     style="display: flex; flex-direction: column; margin-left: 20px; max-width:500px;"
   >
+    <input type="hidden" name="id_product" value="{{product.id_product}}" />
     <h3 style="margin-bottom: 10px; color: rgba(200, 0, 0, 0.7);">Brand:
       {{product.brands}}</h3>
     <p style="margin-bottom: 10px; font-size: 24px; "><b>Mô tả:</b>
@@ -33,10 +34,11 @@
         id="price"
         style="color: rgba(200, 0, 0, 0.7);font-size: 32px;"
       >{{product.gia}}</b>
-      <button class="addToCart-detail">
+      <button class="addToCart-detail" onclick="showSuccessToast(event)">
         <i class="bi bi-cart-plus-fill" style="font-size: 28px;"></i>
       </button>
     </span>
   </div>
-
 </div>
+<div id="toast"></div>
+<script src="/js/product_detail.js"></script>
