Add updates for branch web2

--- a/src/resource/views/admin.hbs
+++ b/src/resource/views/admin.hbs
@@ -80,7 +80,7 @@
     </tbody>
   </table>
   <div class="text-right mb-3">
-    <button class="btn btn-primary" data-toggle="modal" onclick="showCreateRole({{json authority}})"><i class="bi bi-plus-circle"></i> Create Role</button>
+    <button class="btn btn-primary" data-toggle="modal" onclick="showCreateRole({{json authorityforchose}})"><i class="bi bi-plus-circle"></i> Create Role</button>
   </div>
 
   <!-- Modal for Creating Role -->
