--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -1,3 +1,4 @@
+<h1>Danh sách sản phẩm hiện tại</h1>
 <table class="table table-success table-striped">
   <thead>
     <tr>
@@ -9,22 +10,19 @@
       <th scope="col" style="text-align: center;">Price</th>
       <th scope="col" style="text-align: center;">Quantity</th>
       <th scope="col" style="text-align: center;">Description</th>
+      <th scope="col" style="text-align: center;">Actions</th>
     </tr>
   </thead>
   <tbody>
-    {{#each product}}
+    {{#each visibleProducts}}
       <tr>
         <td style="vertical-align: middle; text-align:center;">
           <input type="checkbox" name="id_product" value="{{this.id_product}}" style="transform: scale(1.5);" />
         </td>
         <td style="vertical-align: middle; text-align:center;">
-          {{!-- {{#each (parseJSON this.image) as |img|}}
-            <img src="/image/{{img}}" alt="" style="width: 90px; height:90px; margin-right: 5px;" />
-          {{/each}} --}}
           {{#if (firstImage this.image)}}
             <img src="/image/{{firstImage this.image}}" alt="Product Image" style="width: 90px; height: 90px;" />
           {{/if}}
-
         </td>
         <td style="vertical-align: middle; text-align:center;">{{this.brand_name}}</td>
         <td style="vertical-align: middle; text-align:center;">{{this.product_nametype}}</td>
@@ -33,23 +31,26 @@
         <td style="vertical-align: middle; text-align:center;">{{this.quantity}}</td>
         <td style="vertical-align: middle; text-align:center;">{{this.description}}</td>
         <td style="vertical-align: middle; text-align:center;">
-          <a href="/homepage/update/{{this.id_product}}"><button class="btn btn-warning btn-sm" style="margin-bottom: 8px;"><i
-                class="bi bi-pencil"
-              ></i>
-              Update
-            </button></a>
-          <br />
-          <a href="/homepage/delete/{{this.id_product}}"><button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i>
-              Delete</button></a>
+          {{#ifHasAuthority "update product" ../admin_role}}
+            <a href="/homepage/update/{{this.id_product}}">
+              <button class="btn btn-warning btn-sm"><i class="bi bi-pencil"></i> Update</button>
+            </a>
+          {{/ifHasAuthority}}
+          {{#ifHasAuthority "delete product" ../admin_role}}
+            <a href="/homepage/delete/{{this.id_product}}">
+              <button class="btn btn-danger btn-sm"><i class="bi bi-trash"></i> Delete</button>
+            </a>
+          {{/ifHasAuthority}}
         </td>
       </tr>
     {{/each}}
-
   </tbody>
 </table>
-<a href="/homepage/create" style="color: #F8F9FA;">
-  <button type="button" class="btn btn-success" style="float: right; margin-left: 16px;margin-bottom: 20px">Add Product</button>
-</a>
+{{#ifHasAuthority "add product" admin_role}}
+  <a href="/homepage/create" style="color: #F8F9FA;">
+    <button type="button" class="btn btn-success" style="float: right; margin-left: 16px;margin-bottom: 20px">Add Product</button>
+  </a>
+{{/ifHasAuthority}}
 <button
   type="button"
   class="btn btn-success"
@@ -60,6 +61,9 @@
 <a href="/homepage/admin" style="color: #F8F9FA;">
   <button type="button" class="btn btn-success" style="float: right; margin-left: 16px;margin-bottom: 20px">Role and User</button>
 </a>
+<a href="/homepage/bill_admin" style="color: #F8F9FA;">
+  <button type="button" class="btn btn-success" style="float: right; margin-left: 16px;margin-bottom: 20px">Bill</button>
+</a>
 <script src="/js/home.js"></script>
 {{! <a href='/homepage/list_users'>
   <button
@@ -68,4 +72,43 @@
     style='float: right;'
   >List_users</button>
 </a> }}
-{{! <script src="/js/view.js"></script> }}
+<script src="/js/view.js"></script>
+<h1>Danh sách sản phẩm đã xóa</h1>
+<table class="table table-danger table-striped">
+  <thead>
+    <tr>
+      <th scope="col" style="text-align: center;">Image</th>
+      <th scope="col" style="text-align: center;">Brands</th>
+      <th scope="col" style="text-align: center;">Type</th>
+      <th scope="col" style="text-align: center;">Name</th>
+      <th scope="col" style="text-align: center;">Price</th>
+      <th scope="col" style="text-align: center;">Quantity</th>
+      <th scope="col" style="text-align: center;">Description</th>
+      <th scope="col" style="text-align: center;">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each hiddenProducts}}
+      <tr>
+        <td style="vertical-align: middle; text-align:center;">
+          {{#if (firstImage this.image)}}
+            <img src="/image/{{firstImage this.image}}" alt="Product Image" style="width: 90px; height: 90px;" />
+          {{/if}}
+        </td>
+        <td style="vertical-align: middle; text-align:center;">{{this.brand_name}}</td>
+        <td style="vertical-align: middle; text-align:center;">{{this.product_nametype}}</td>
+        <td style="vertical-align: middle; text-align:center;">{{this.name}}</td>
+        <td style="vertical-align: middle; text-align:center;">{{this.price}}</td>
+        <td style="vertical-align: middle; text-align:center;">{{this.quantity}}</td>
+        <td style="vertical-align: middle; text-align:center;">{{this.description}}</td>
+        <td style="vertical-align: middle; text-align:center;">
+          {{#ifHasAuthority "reset product" ../admin_role}}
+            <a href="/homepage/reset/{{this.id_product}}">
+              <button class="btn btn-success btn-sm"><i class="bi bi-arrow-counterclockwise"></i> Reset</button>
+            </a>
+          {{/ifHasAuthority}}
+        </td>
+      </tr>
+    {{/each}}
+  </tbody>
+</table>
