--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -1,295 +1,294 @@
-@import 'hii';
+@import "hii";
 h1 {
-    color: red;
+  color: red;
 }
 
 h2 {
-    color: $blue-color;
+  color: $blue-color;
 }
 
 .product-img {
-    max-width: 100%;
-    align-items: center;
-    height: 200px;
+  max-width: 100%;
+  align-items: center;
+  height: 200px;
 }
 
 .pagination {
-    margin-right: 10%;
-    margin-top: 30px;
+  margin-right: 10%;
+  margin-top: 30px;
 }
 
 .col-3 {
-    margin-top: 5px;
-    margin-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .card2 {
-    border: 2px solid #000;
-    border-radius: 7px;
-    height: 95%;
+  border: 2px solid #000;
+  border-radius: 7px;
+  height: 95%;
 }
 
 .card-text {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
 
 .figure-caption {
-    text-align: center;
+  text-align: center;
 }
 
 .card2-box {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 .card2-box:hover {
-    color: rgba($color: #e14343, $alpha: 1);
-    text-decoration: none;
+  color: rgba($color: #e14343, $alpha: 1);
+  text-decoration: none;
 }
 
 .card2 {
-    position: relative;
-    box-shadow: 0 0.0625rem 20px 0 rgba(0, 0, 0, 0.15);
-    transition: transform linear 0.1s;
-    margin-bottom: 5px;
-    min-height: 333px;
-    padding-bottom: 5px;
+  position: relative;
+  box-shadow: 0 0.0625rem 20px 0 rgba(0, 0, 0, 0.15);
+  transition: transform linear 0.1s;
+  margin-bottom: 5px;
+  min-height: 333px;
+  padding-bottom: 5px;
 }
 
 .card2:hover {
-    transform: translateY(-1px);
-    box-shadow: 0 0.0625rem 20px 0 rgba(0, 0, 0, 0.05);
+  transform: translateY(-1px);
+  box-shadow: 0 0.0625rem 20px 0 rgba(0, 0, 0, 0.05);
 }
 
 .addToCart {
-    border: none;
-    background-color: transparent;
-    width: 40px;
-    height: 36px;
-    transition: transform linear 0.1s;
-    padding: 0;
-    margin: 0;
-    border-radius: 30%;
-    /* Xóa tất cả margin */
+  border: none;
+  background-color: transparent;
+  width: 40px;
+  height: 36px;
+  transition: transform linear 0.1s;
+  padding: 0;
+  margin: 0;
+  border-radius: 30%;
+  /* Xóa tất cả margin */
 }
 
 .addToCart:hover {
-    transform: translateY(-1px);
-    box-shadow: 0 0.0625rem 20px 0 rgba(0, 0, 0, 0.05);
-    background-color: #dbb4b4;
-    cursor: pointer;
+  transform: translateY(-1px);
+  box-shadow: 0 0.0625rem 20px 0 rgba(0, 0, 0, 0.05);
+  background-color: #dbb4b4;
+  cursor: pointer;
 }
 
 .addToCart-detail {
-    border: none;
-    background-color: transparent;
-    transition: transform linear 0.1s;
-    padding: 0;
-    width: 63px;
-    height: 50px;
-    margin: 0px 0px 0px 20px;
-    border-radius: 30%;
-    /* Xóa tất cả margin */
+  border: none;
+  background-color: transparent;
+  transition: transform linear 0.1s;
+  padding: 0;
+  width: 63px;
+  height: 50px;
+  margin: 0px 0px 0px 20px;
+  border-radius: 30%;
+  /* Xóa tất cả margin */
 }
 
 .addToCart-detail:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 0.0625rem 20px 0 rgba(0, 0, 0, 0.05);
-    background-color: #dbb4b4;
-    cursor: pointer;
+  transform: translateY(-2px);
+  box-shadow: 0 0.0625rem 20px 0 rgba(0, 0, 0, 0.05);
+  background-color: #dbb4b4;
+  cursor: pointer;
 }
 
 .select_option {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    height: 36px;
-    background-color: #b5b0b0;
-    border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 36px;
+  background-color: #b5b0b0;
+  border-radius: 12px;
 }
 
 .quantity_cart {
-    position: absolute;
-    top: 12px;
-    right: -8px;
-    width: 24px;
-    height: 16px;
-    border: 0.5px solid rgb(114, 110, 110);
-    border-radius: 8px;
-    background: azure;
-    z-index: 1;
-    font-stretch: expanded;
-    color: rgb(216, 105, 105);
-    text-align: center;
+  position: absolute;
+  top: 12px;
+  right: -8px;
+  width: 24px;
+  height: 16px;
+  border: 0.5px solid rgb(114, 110, 110);
+  border-radius: 8px;
+  background: azure;
+  z-index: 1;
+  font-stretch: expanded;
+  color: rgb(216, 105, 105);
+  text-align: center;
 }
-
 
 /* ======= Toast message ======== */
 
 #toast {
-    position: fixed;
-    top: 32px;
-    right: 32px;
-    z-index: 999999;
+  position: fixed;
+  top: 32px;
+  right: 32px;
+  z-index: 999999;
 }
 
 .toast {
-    display: flex;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 2px;
-    padding: 20px 0;
-    min-width: 360px;
-    max-width: 400px;
-    border-left: 4px solid;
-    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
-    transition: all linear 0.3s;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 2px;
+  padding: 20px 0;
+  min-width: 360px;
+  max-width: 400px;
+  border-left: 4px solid;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
+  transition: all linear 0.3s;
 }
 
 @keyframes slideInLeft {
-    from {
-        opacity: 0;
-        transform: translateX(calc(100% + 32px));
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
+  from {
+    opacity: 0;
+    transform: translateX(calc(100% + 32px));
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 @keyframes fadeOut {
-    to {
-        opacity: 0;
-    }
+  to {
+    opacity: 0;
+  }
 }
 
 .toast--success {
-    border-color: #47d864;
+  border-color: #47d864;
 }
 
 .toast--success .toast__icon {
-    color: #47d864;
+  color: #47d864;
 }
 
 .toast--info {
-    border-color: #2f86eb;
+  border-color: #2f86eb;
 }
 
 .toast--info .toast__icon {
-    color: #2f86eb;
+  color: #2f86eb;
 }
 
 .toast--warning {
-    border-color: #ffc021;
+  border-color: #ffc021;
 }
 
 .toast--warning .toast__icon {
-    color: #ffc021;
+  color: #ffc021;
 }
 
 .toast--error {
-    border-color: #ff623d;
+  border-color: #ff623d;
 }
 
 .toast--error .toast__icon {
-    color: #ff623d;
+  color: #ff623d;
 }
 
-.toast+.toast {
-    margin-top: 24px;
+.toast + .toast {
+  margin-top: 24px;
 }
 
 .toast__icon {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .toast__icon,
 .toast__close {
-    padding: 0 16px;
+  padding: 0 16px;
 }
 
 .toast__body {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .toast__title {
-    font-size: 16px;
-    font-weight: 600;
-    color: #333;
+  font-size: 16px;
+  font-weight: 600;
+  color: #333;
 }
 
 .toast__msg {
-    font-size: 14px;
-    color: #888;
-    margin-top: 6px;
-    line-height: 1.5;
+  font-size: 14px;
+  color: #888;
+  margin-top: 6px;
+  line-height: 1.5;
 }
 
 .toast__close {
-    font-size: 20px;
-    color: rgba(0, 0, 0, 0.3);
-    cursor: pointer;
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 .image-slider {
-    overflow: hidden;
-    height: auto;
-    /* Thiết lập chiều cao tự động cho slider */
+  overflow: hidden;
+  height: auto;
+  /* Thiết lập chiều cao tự động cho slider */
 }
 
 .slides-container {
-    display: flex;
-    border: 1px solid black;
-    /* Khung viền đen 1px */
-    flex-wrap: nowrap;
-    /* Ngăn các phần tử trượt qua hàng */
-    margin-top: 20px;
-    /* Khoảng cách từ header */
-    margin-bottom: 20px;
-    /* Khoảng cách dưới cùng */
-    align-items: center;
-    /* Canh giữa các phần tử con */
+  display: flex;
+  border: 1px solid black;
+  /* Khung viền đen 1px */
+  flex-wrap: nowrap;
+  /* Ngăn các phần tử trượt qua hàng */
+  margin-top: 20px;
+  /* Khoảng cách từ header */
+  margin-bottom: 20px;
+  /* Khoảng cách dưới cùng */
+  align-items: center;
+  /* Canh giữa các phần tử con */
 }
 
 .slide {
-    flex: 0 0 100%;
-    /* Sử dụng transition để tạo hiệu ứng mờ dần */
-    width: 100%;
-    /* Chiếm toàn bộ chiều rộng của slider */
-    height: 360px;
-    object-fit: fill;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
+  flex: 0 0 100%;
+  /* Sử dụng transition để tạo hiệu ứng mờ dần */
+  width: 100%;
+  /* Chiếm toàn bộ chiều rộng của slider */
+  height: 432px;
+  object-fit: fill;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
 
 .slide.active {
-    opacity: 1;
+  opacity: 1;
 }
 
 .img-comment {
-    max-width: 56px;
-    max-height: 36px;
-    margin-right: 10px;
+  max-width: 56px;
+  max-height: 36px;
+  margin-right: 10px;
 }
 
 .description-comment {
-    border-top: solid 1px #d8d8d8;
-    border-left: none !important;
-    border-right: none !important;
-    border-bottom: none !important;
-    margin-top: 12px;
-    max-width: 100%;
-    padding-left: 0;
+  border-top: solid 1px #d8d8d8;
+  border-left: none !important;
+  border-right: none !important;
+  border-bottom: none !important;
+  margin-top: 12px;
+  max-width: 100%;
+  padding-left: 0;
 }
 
 .reply-cmt {
-    width: 100%;
-    display: inline-flex;
-    list-style-type: none;
-    justify-content: flex-end;
-    margin-bottom: 0;
+  width: 100%;
+  display: inline-flex;
+  list-style-type: none;
+  justify-content: flex-end;
+  margin-bottom: 0;
 }
