--- a/src/resource/views/register.hbs
+++ b/src/resource/views/register.hbs
@@ -1,77 +1,39 @@
-<form id='registerForm' method='post'>
-  <section class='vh-100 gradient-custom'>
-    <div class='container py-5 h-100'>
-      <div class='row d-flex justify-content-center align-items-center h-100'>
-        <div class='col-12 col-md-8 col-lg-6 col-xl-5'>
-          <div class='card bg-dark text-white' style='border-radius: 1rem;'>
-            <div class='card-body p-5'>
+<form id="registerForm" method="post">
+  <section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-body p-5">
 
-              <div class='mb-md-5 mt-md-4 pb-5'>
+              <div class="mb-md-5 mt-md-4 pb-5">
 
-                <h2
-                  class='fw-bold mb-2 text-uppercase text-center'
-                >Register</h2>
-                <p class='text-white-50 mb-5 text-center'>Please fill to
-                  Register</p>
+                <h2 class="fw-bold mb-2 text-uppercase text-center">Register</h2>
+                <p class="text-white-50 mb-5 text-center">Please fill to Register</p>
 
-                <div class='form-outline form-white mb-4'>
-                  <label class='form-label text-left'>UserName</label>
-                  <input
-                    type='Name'
-                    id='name'
-                    class='form-control form-control-lg'
-                    name='Name'
-                    required
-                  />
+                <div class="form-outline form-white mb-4">
+                  <label class="form-label text-left">UserName</label>
+                  <input type="Name" id="name" class="form-control form-control-lg" name="Name" required />
                 </div>
-                <div
-                  class='form-outline form-white mb-4'
-                  style='display: flex; justify-content:space-between;'
-                >
-                  <label class='form-label'>Gender :</label>
-                  <select
-                    class='form-select'
-                    name='gender'
-                    id='gender'
-                    style='width: 50%'
-                  >
-                    <option value='male'>Male</option>
-                    <option value='female'>Female</option>
-                    <option value='other'>Other</option>
+                <div class="form-outline form-white mb-4" style="display: flex; justify-content:space-between;">
+                  <label class="form-label">Gender :</label>
+                  <select class="form-select" name="gender" id="gender" style="width: 50%">
+                    <option value="Male">Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Other">Other</option>
                   </select>
                 </div>
-                <div class='form-outline form-white mb-4'>
-                  <label class='form-label text-left'>Age</label>
-                  <input
-                    id='Age'
-                    class='form-control form-control-lg'
-                    name='Age'
-                    type='text'
-                    required
-                  />
+                <div class="form-outline form-white mb-4">
+                  <label class="form-label text-left">Age</label>
+                  <input id="Age" class="form-control form-control-lg" name="Age" type="text" required />
                 </div>
-                <div class='form-outline form-white mb-4'>
-                  <label class='form-label text-left'>Account</label>
-                  <input
-                    type='accountName'
-                    id='accountName'
-                    class='form-control form-control-lg'
-                    name='accountName'
-                    required
-                  />
+                <div class="form-outline form-white mb-4">
+                  <label class="form-label text-left">Account</label>
+                  <input type="accountName" id="accountName" class="form-control form-control-lg" name="accountName" required />
                 </div>
-                <div class='form-outline form-white mb-4'>
-                  <label
-                    class='form-label text-left'
-                    for='typePasswordX'
-                  >Password</label>
-                  <input
-                    type='password'
-                    id='password'
-                    class='form-control form-control-lg'
-                    name='password'
-                    required
-                  />
+                <div class="form-outline form-white mb-4">
+                  <label class="form-label text-left" for="typePasswordX">Password</label>
+                  <input type="password" id="password" class="form-control form-control-lg" name="password" required />
                 </div>
 
                 {{! <p class="small mb-5 pb-lg-2"><a
@@ -79,11 +41,7 @@
                     href="#!"
                   >Forgot password?</a></p> }}
 
-                <button
-                  id='submitBtn'
-                  class='btn btn-outline-light btn-lg px-5 mx-auto d-block'
-                  type='submit'
-                >Submit</button>
+                <button id="submitBtn" class="btn btn-outline-light btn-lg px-5 mx-auto d-block" type="submit">Submit</button>
 
                 {{! <div class="d-flex justify-content-center text-center mt-4 pt-1">
                 <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
@@ -94,8 +52,8 @@
               </div>
 
               <div>
-                <p class='mb-0 text-center'>Already have an account?
-                  <a href='../' class='text-white-50 fw-bold'>Login</a>
+                <p class="mb-0 text-center">Already have an account?
+                  <a href="../" class="text-white-50 fw-bold">Login</a>
                 </p>
               </div>
 
@@ -106,4 +64,4 @@
     </div>
   </section>
 </form>
-<script src='js/register.js'></script>
+<script src="js/register.js"></script>
